care/force-app/main/default/objects/Business_Representative__c/Business_Representative__c.object-meta.xml
<CustomObject>
    <label>Business Representative</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Business Representative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Representatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>