care/force-app/main/default/objects/Business_Representative__c/fields/Galore_uuid__c.field-meta.xml
<CustomField>
    <fullName>Galore_uuid__c</fullName>
    <label>Galore uuid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>